feat(sauvegardes): un seul format avec sauvegarder.bat, droits Maître, sauvegarde automatique au démarrage
L'écran « Sauvegardes » écrivait un .dump de la base seule dans uploads/db_backups,
invisible de restaurer.bat, et ignorait les sauvegardes des scripts. Son bouton de
téléchargement était un simple lien sans jeton : 403 hors mode démo. Les dates
avaient 2 h de retard, conteneurs en UTC.

- Une sauvegarde est un dossier <nom>/database.sql + <nom>/uploads, le format de
  sauvegarder.bat, dans BACKUP_PATH (data\backups chez le notaire). Écran et scripts
  voient les mêmes sauvegardes.
- Restauration depuis l'écran en une transaction (psql --single-transaction,
  ON_ERROR_STOP) : un prélude supprime les seuls objets recréés par la sauvegarde,
  une table ajoutée depuis est conservée ; en cas d'erreur la base est intacte et
  les documents ne sont pas touchés. Fonctionne aussi sur les dumps sans --clean.
- Sauvegarde automatique (frida_auto_...) si la dernière a plus de 24 h, vérifiée
  2 min après le démarrage puis toutes les heures ; les 7 dernières automatiques
  sont gardées, les manuelles jamais supprimées. L'ancienne heure fixe (2 h UTC)
  n'était presque jamais atteinte sur un poste éteint la nuit.
- Archivage automatique séparé (ARCHIVE_AUTO_ENABLED, désactivé par défaut) : il
  retirait des dossiers de la base dès que la sauvegarde auto était activée.
- Restaurer, supprimer, télécharger et archiver réservés au Maître. Téléchargement
  par lien à usage unique de 60 s (/api/telechargements/<jeton>), suivi en flux par
  le navigateur : une sauvegarde avec documents peut peser plusieurs Go.
- Démo publique : SAUVEGARDES_LECTURE_SEULE=true (consultation seule).
- Mode démo désactivé par défaut (app.demo-mode) ; gardé explicitement dans le
  docker-compose.yml de développement et les compose de démo.
- Refus de @PreAuthorize : 403 avec message au lieu de 500 (les gestionnaires
  génériques interceptaient AccessDeniedException).
- /actuator/health sans jeton : le 